@@ -141,6 +141,31 @@ void tlistbox::list_item_clicked(twidget* caller)
 	assert(false);
 }
 
+void tlistbox::set_size(const tpoint& origin, const tpoint& size)
+{
+	// Inherited.
+	tscrollbar_container::set_size(origin, size);
+
+	/**
+	 * @todo Work-around to set the selected item visible again.
+	 *
+	 * At the moment the listboxes and dialogs in general are resized a lot as
+	 * work-around for sizing. So this function makes the selected item in view
+	 * again. It doesn't work great in all cases but the proper fix is to avoid
+	 * resizing dialogs a lot. Need more work later on.
+	 */
+	const int selected_item = generator_->get_selected_item();
+	if(selected_item != -1) {
+		const SDL_Rect& visible = content_visible_area();
+		SDL_Rect rect = generator_->get_item(selected_item).get_rect();
+
+		rect.x = visible.x;
+		rect.w = visible.w;
+
+		show_content_rect(rect);
+	}
+}
+
 void tlistbox::child_populate_dirty_list(twindow& caller,
 		const std::vector<twidget*>& call_stack)
 {
